--- a/app/templates/components/node/form.hbs
+++ b/app/templates/components/node/form.hbs
@@ -1,31 +1,24 @@
 <BsForm @formLayout="horizontal" as |form|>
 
-  <Node::LabelList as |allLabels|>
-    <PowerSelectMultiple @searchEnabled={{true}} @options={{allLabels}} @selected={{selectedLabels}} @placeholder="Select labels" @onchange={{action (mut selectedLabels)}} as |label|>
-      {{label}}
-    </PowerSelectMultiple>
-  </Node::LabelList>
+  <section>
+    <Node::LabelList as |allLabels|>
+      <PowerSelectMultiple @searchEnabled={{true}} @options={{allLabels}} @selected={{selectedLabels}} @placeholder="Select labels" @onchange={{action (mut selectedLabels)}} as |label|>
+        {{label}}
+      </PowerSelectMultiple>
+    </Node::LabelList>
+  </section>
 
-  {{#each-in properties as |key property|}}
-    <form.element @value={{key}} @controlType="text" @autofocus={{true}} @placeholder="Property Name" @onChange={{fn (action "changePropertyKey" key)}} />
-    <form.element @value={{property}} @controlType="text" @placeholder="Property Value" @onChange={{action "changePropertyValue" property key}} />
-  {{/each-in}}
+  <section>
+    {{#each-in properties as |key property|}}
+      <form.element @value={{key}} @controlType="text" @autofocus={{true}} @placeholder="Property Name" @onChange={{fn (action "changePropertyKey" key)}} />
+      <form.element @value={{property}} @controlType="text" @placeholder="Property Value" @onChange={{action "changePropertyValue" property key}} />
+      <hr>
+    {{/each-in}}
+  </section>
 
   {{#if addingNewProperty}}
     <form.element @value={{newPropertyKey}} @controlType="text" @onChange={{action (mut newPropertyKey)}} {{on "focusout" (action "focusOutProperty")}} />
     <form.element @value={{newPropertyValue}} @controlType="text" @onChange={{action (mut newPropertyValue)}} {{on "focusout" (action "focusOutProperty")}} />
   {{/if}}
-
-  <button {{on "click" (action (mut addingNewProperty))}}>
-    Add property
-  </button>
-
-  <button {{on "click" (action save)}}>
-    Save
-  </button>
-
-  <button {{on "click" (action deleteNode node)}}>
-    Delete
-  </button>
 
 </BsForm>
