--- a/app/templates/components/visualization/graph.hbs
+++ b/app/templates/components/visualization/graph.hbs
@@ -1,1 +1,1 @@
-<svg height="100%" width="100%" style="border: 1px solid black;"> </svg>
+<svg height="100%" width="100%" style="border-right: 1px solid black;"> </svg>
