resets searching state when search modal closed

--- a/app/templates/components/visualization/toolbar.hbs
+++ b/app/templates/components/visualization/toolbar.hbs
@@ -1,5 +1,5 @@
 {{#if isSearching}}
-  <Visualization::Toolbar::queryBuilder @search={{action 'search'}} />
+  <Visualization::Toolbar::queryBuilder @search={{action 'search'}} @isSearching={{mut isSearching}}/>
 {{/if}}
 <button {{on "click" (action (mut isSearching) (not isSearching))}}>Search</button>
 <button {{on "click" (action this.clearCanvas)}}>Clear</button>
