can create rudimentary relationships

--- a/app/styles/app.scss
+++ b/app/styles/app.scss
@@ -1,8 +1,8 @@
 @import "pod-styles";
-@import "ember-power-select/themes/material";
-@import "ember-power-select";
 @import "ember-bootstrap/bootstrap";
-@import "ember-power-select/themes/bootstrap";
+@import "ember-power-select";
+@import "ember-power-select/themes/material";
+// @import "ember-power-select/themes/bootstrap";
 
 // .toolbar {
 //   position: absolute;
