--- a/app/templates/components/visualization/sidebar.hbs
+++ b/app/templates/components/visualization/sidebar.hbs
@@ -1,2 +1,2 @@
-<Node::Base @node={{node}} @saveNode={{saveNode}} @deleteNode={{deleteNode}} @closeNodeViewer={{closeNodeViewer}}/>
-{{!-- <Edge::Base @node={{node}}/> --}}
+<Sidebar::Node @node={{node}} @saveNode={{saveNode}} @deleteNode={{deleteNode}} @closeNodeViewer={{closeNodeViewer}} />
+<Sidebar::Edge @sourceNode={{sourceNode}} @destinationNode={{destinationNode}} @createRelationship={{createRelationship}}/>
