--- a/app/templates/components/node/base.hbs
+++ b/app/templates/components/node/base.hbs
@@ -1,21 +1,23 @@
-<h3>
-  {{node.name}}
-  <button class="close" {{on "click" (action closeNodeViewer)}}>
-    {{fa-icon "times"}}
-  </button>
-</h3>
-<Node::Form @node={{node}} @save={{action "save"}} @changes={{this.changes}} @deleteNode={{deleteNode}} @addingNewProperty={{mut this.addingNewProperty}} />
+{{#if node}}
+  <h3>
+    {{node.name}}
+    <button class="close" {{on "click" (action closeNodeViewer)}}>
+      {{fa-icon "times"}}
+    </button>
+  </h3>
+  <Node::Form @node={{node}} @save={{action "save"}} @changes={{this.changes}} @deleteNode={{deleteNode}} @addingNewProperty={{mut this.addingNewProperty}} />
 
-<div class="footer">
-  <button {{on "click" (action (mut addingNewProperty))}}>
-    Add property
-  </button>
+  <div class="footer">
+    <button {{on "click" (action (mut addingNewProperty))}}>
+      Add property
+    </button>
 
-  <button {{on "click" (action save)}}>
-    Save
-  </button>
+    <button {{on "click" (action save)}}>
+      Save
+    </button>
 
-  <button {{on "click" (action deleteNode node)}}>
-    Delete
-  </button>
-</div>
+    <button {{on "click" (action deleteNode node)}}>
+      Delete
+    </button>
+  </div>
+{{/if}}
