--- a/app/templates/components/visualization/toolbar.hbs
+++ b/app/templates/components/visualization/toolbar.hbs
@@ -4,3 +4,4 @@
 <button {{on "click" (action (mut isSearching) (not isSearching))}}>Search</button>
 <button {{on "click" (action this.clearCanvas)}}>Clear</button>
 <button {{on "click" (action this.undo)}}>Undo</button>
+<button {{on "click" (action this.toggleDrawMode)}}>Draw edges</button>
