return cache.items as vis model

--- a/app/templates/visualization.hbs
+++ b/app/templates/visualization.hbs
@@ -1,5 +1,5 @@
 <Visualization::Frame
-  @items={{this.model}}
+  @items={{this.items}}
   @loaded={{this.loaded}}
   @labels={{this.labels}}
   @properties={{this.properties}}
