--- a/app/styles/component-styles/sidebar/node.scss
+++ b/app/styles/component-styles/sidebar/node.scss
@@ -2,6 +2,7 @@
   height: calc((100vh - 65px - 25px) * (2 / 3));
   width: 100%;
   overflow: auto;
+  padding: 1rem;
 }
 
 h3,
@@ -9,7 +10,7 @@ h3,
   width: 100%;
   background-color: white;
   position: sticky;
-  padding: 15px;
+  padding: 15px 0;
   z-index: 1;
 }
 
@@ -23,4 +24,8 @@ h3 {
 section {
   position: sticky;
   top: 0;
+}
+
+.save-reminder {
+  color: rgb(27, 206, 27);
 }
