--- a/app/styles/component-styles/sidebar/edge.scss
+++ b/app/styles/component-styles/sidebar/edge.scss
@@ -1,5 +1,8 @@
 & {
-  height: calc((100vh - 65px - 25px) * (1 / 3));
+  // height: calc((100vh - 65px - 25px) * (1 / 3));
+  height: 100%;
   width: 100%;
   overflow: auto;
+  box-shadow: 0px -3px 6px rgba(0,0,0,0.15);
+  padding: 1rem;
 }
