--- a/app/templates/components/node/form.hbs
+++ b/app/templates/components/node/form.hbs
@@ -1,6 +1,6 @@
-<BsForm @formLayout="horizontal" as |form|>
+<BsForm @formLayout="vertical" as |form|>
 
-  <section>
+  <section class="mb-3">
     <Node::LabelList as |allLabels|>
 
       <PowerSelectMultipleWithCreate @searchEnabled={{true}} @options={{allLabels}} @selected={{selectedLabels}} @placeholder="Select labels" @onchange={{action (mut selectedLabels)}} @oncreate={{action "createNewLabel"}} as |label|>
@@ -9,12 +9,25 @@
     </Node::LabelList>
   </section>
 
-  <section>
+  <section class="mb-3">
     {{#each-in properties as |key property|}}
-      <form.element @value={{key}} @controlType="text" @autofocus={{true}} @placeholder="Property Name" @onChange={{fn (action "changePropertyKey" key)}} />
-      <form.element @value={{property}} @controlType="text" @placeholder="Property Value" @onChange={{action "changePropertyValue" property key}} />
-      <button {{action "deleteProperty" key}}>delete</button>
-      <hr>
+      <form.element
+        @value={{key}}
+        @controlType="text"
+        @autofocus={{true}}
+        @placeholder="Property Name"
+        @onChange={{fn (action "changePropertyKey" key)}}
+      />
+      <form.element
+        @value={{property}}
+        @controlType="text"
+        @placeholder="Property Value"
+        @onChange={{action "changePropertyValue" property key}}
+      />
+      <section class="d-flex">
+        <button class="btn btn-warning ml-auto mr-0 mb-3" {{action "deleteProperty" key}}>Delete this property</button>
+      </section>
+      {{!-- <hr> --}}
     {{/each-in}}
   </section>
 
