--- a/app/templates/components/sidebar/node.hbs
+++ b/app/templates/components/sidebar/node.hbs
@@ -8,16 +8,22 @@
   <Node::Form @node={{node}} @save={{action "save"}} @changes={{this.changes}} @deleteNode={{deleteNode}} @addingNewProperty={{mut this.addingNewProperty}} />
 
   <div class="footer">
-    <button {{on "click" (action (mut addingNewProperty))}}>
+    <button class="btn btn-secondary" {{on "click" (action (mut addingNewProperty))}}>
       Add property
     </button>
 
-    <button {{on "click" (action save)}}>
+    <button class="btn btn-primary" {{on "click" (action save)}}>
       Save
     </button>
 
-    <button {{on "click" (action deleteNode node)}}>
+    <button class="btn btn-danger" {{on "click" (action deleteNode node)}}>
       Delete
     </button>
+
+    {{#if this.showSaveReminder}}
+      <span class="save-reminder">
+        Make sure you save!
+      </span>
+    {{/if}}
   </div>
 {{/if}}
