--- a/app/templates/components/visualization/toolbar.hbs
+++ b/app/templates/components/visualization/toolbar.hbs
@@ -1,7 +1,7 @@
 {{#if isSearching}}
   <Visualization::Toolbar::queryBuilder @search={{action 'search'}} @isSearching={{mut isSearching}}/>
 {{/if}}
-<button {{on "click" (action (mut isSearching) (not isSearching))}}>Search</button>
-<button {{on "click" (action this.clearCanvas)}}>Clear</button>
-<button {{on "click" (action this.undo)}}>Undo</button>
-<button {{on "click" (action this.toggleDrawMode)}}>Draw edges</button>
+<button class="btn btn-primary" {{on "click" (action (mut isSearching) (not isSearching))}}>Search</button>
+<button class="btn btn-warning" {{on "click" (action this.clearCanvas)}}>Clear</button>
+<button class="btn btn-danger" {{on "click" (action this.undo)}}>Undo</button>
+<button class="btn btn-secondary" {{on "click" (action this.toggleDrawMode)}}>Draw edges</button>
